Lazarus_Athena/include/X11/Xaw/in_arbeit/Intrinsic.h

typedef const char *String;
typedef char *String;
typedef struct _WidgetRec *Widget;
typedef struct _WidgetClassRec *WidgetClass;
/* We're not included from the private file, so define these */

extern Display *XtDisplay(
    Widget 		/* widget */
);
extern Display *XtDisplayOfObject(
    Widget 		/* object */
);
extern Screen *XtScreen(
    Widget 		/* widget */
);
extern Screen *XtScreenOfObject(
    Widget 		/* object */
);
extern Window XtWindow(
    Widget 		/* widget */
);
extern Window XtWindowOfObject(
    Widget 		/* object */
);
extern String XtName(
    Widget 		/* object */
);
extern WidgetClass XtSuperclass(
    Widget 		/* object */
);
extern WidgetClass XtClass(
    Widget 		/* object */
);
extern Widget XtParent(
    Widget 		/* widget */
);
extern void XtMapWidget(Widget /* w */);
#define XtMapWidget(widget)	XMapWindow(XtDisplay(widget), XtWindow(widget))
extern void XtUnmapWidget(Widget /* w */);
#define XtUnmapWidget(widget)	\
		XUnmapWindow(XtDisplay(widget), XtWindow(widget))