Lazarus_Athena/include/Intrinsic.pas


function XtDisplay(para1:TWidget):PDisplay;cdecl;external;
    { object  }
function XtDisplayOfObject(para1:TWidget):PDisplay;cdecl;external;
    { widget  }
function XtScreen(para1:TWidget):PScreen;cdecl;external;
    { object  }
function XtScreenOfObject(para1:TWidget):PScreen;cdecl;external;
    { widget  }
function XtWindow(para1:TWidget):TWindow;cdecl;external;
    { object  }
function XtWindowOfObject(para1:TWidget):TWindow;cdecl;external;
    { object  }
function XtName(para1:TWidget):TString;cdecl;external;
    { object  }
function XtSuperclass(para1:TWidget):TWidgetClass;cdecl;external;
    { object  }
function XtClass(para1:TWidget):TWidgetClass;cdecl;external;
    { widget  }
function XtParent(para1:TWidget):TWidget;cdecl;external;
{$endif}
    {_XtIntrinsicP_h }
{$undef XtMapWidget}
    { w  }
procedure XtMapWidget(para1:TWidget);cdecl;external;
    { was #define dname(params) para_def_expr }
    { argument types are unknown }
    { return type might be wrong }   
    function XtMapWidget(widget : longint) : longint;    

{$undef XtUnmapWidget}
    { w  }procedure XtUnmapWidget(para1:TWidget);cdecl;external;
    { was #define dname(params) para_def_expr }
    { argument types are unknown }
    { return type might be wrong }   
    function XtUnmapWidget(widget : longint) : longint;    
